Corrigir Depois a respeito de Horários Mistos, Exemplo HrEntra: 19:00 e Hr Sai 10:00

--- a/WS/WS/Views/PageListar.xaml
+++ b/WS/WS/Views/PageListar.xaml
@@ -1,25 +1,71 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="WS.Views.PageListar">
+             x:Class="WS.Views.PageListar" Title="Listagem">
     <ContentPage.Content>
         <StackLayout>
-            <ListView x:Name="lsvHistorico" RowHeight="170" ItemSelected="lsvHistorico_ItemSelected">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout Orientation="Vertical">
-                                <Label Text="Nome:"/>
-                                <Label Text="{Binding Nome}"/>
-                                <Label Text="Horário de Entrada:"/>
-                                <Label Text="{Binding HorarioEntrada}"/>
-                                <Label Text="Horário de Saída:"/>
-                                <Label Text="{Binding HorarioSaida}"/>
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+            <Label Text="Listagem dos Turnos: " FontSize="20" FontAttributes="Bold" HorizontalTextAlignment="Center" Margin="2"/>
+            <Frame BackgroundColor="Transparent" BorderColor="White" CornerRadius="10" Margin="4.5" HeightRequest="560">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Text="Turno: Manhã ☀" Grid.Row="0" Grid.Column="0" TextColor="White" HorizontalOptions="Center"/>
+                    <Label Text="Turno: Tarde 🌄" Grid.Row="0" Grid.Column="1" TextColor="White" HorizontalOptions="Center"/>
+                    <Label Text="Turno: Noite 🌕" Grid.Row="0" Grid.Column="2" TextColor="White" HorizontalOptions="Center"/>
+                    <BoxView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" HeightRequest="1" BackgroundColor="White" HorizontalOptions="FillAndExpand"/>
+                    <ListView x:Name="lsvHistorico" Grid.Row="2" Grid.Column="0" HasUnevenRows="True" SeparatorColor="White" Margin="15" ItemSelected="lsvHistorico_ItemSelected">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <StackLayout Orientation="Vertical">
+                                        <Label Text="{Binding Nome, StringFormat='Nome: {0}'}" TextColor="White"/>
+                                        <Label Text="{Binding HorarioEntrada, StringFormat='Horário de Entrada: {0}'}" TextColor="White"/>
+                                        <Label Text="{Binding HorarioSaida, StringFormat='Horário de Saída: {0}'}" TextColor="White"/>
+                                    </StackLayout>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                    <ListView x:Name="lsvHistoricoTarde" Grid.Row="2" Grid.Column="1" HasUnevenRows="True" SeparatorColor="White" Margin="15" ItemSelected="lsvHistoricoTarde_ItemSelected">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <StackLayout Orientation="Vertical">
+                                        <Label Text="{Binding Nome, StringFormat='Nome: {0}'}" TextColor="White"/>
+                                        <Label Text="{Binding HorarioEntrada, StringFormat='Horário de Entrada: {0}'}" TextColor="White"/>
+                                        <Label Text="{Binding HorarioSaida, StringFormat='Horário de Saída: {0}'}" TextColor="White"/>
+                                    </StackLayout>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                    <ListView x:Name="lsvHistoricoNoite" Grid.Row="2" Grid.Column="2" HasUnevenRows="True" SeparatorColor="White" Margin="15" ItemSelected="lsvHistoricoNoite_ItemSelected">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <StackLayout Orientation="Vertical">
+                                        <Label Text="{Binding Nome, StringFormat='Nome: {0}'}" TextColor="White"/>
+                                        <Label Text="{Binding HorarioEntrada, StringFormat='Horário de Entrada: {0}'}" TextColor="White"/>
+                                        <Label Text="{Binding HorarioSaida, StringFormat='Horário de Saída: {0}'}" TextColor="White"/>
+                                    </StackLayout>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Grid>
+            </Frame>
+            <StackLayout>
+                <Button x:Name="btnVoltar" Text="Voltar" BackgroundColor="IndianRed" HorizontalOptions="Center" FontAttributes="Bold"  CornerRadius="20" Clicked="btnVoltar_Clicked"/>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
