--- a/WS/WS/Views/PageCadastrar.xaml
+++ b/WS/WS/Views/PageCadastrar.xaml
@@ -1,16 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="WS.Views.PageCadastrar">
+             x:Class="WS.Views.PageCadastrar" Title="Cadastro">
     <ContentPage.Content>
         <StackLayout>
+            <Label x:Name="lblId" Text="Id:" IsVisible="False"/>
+            <Entry x:Name="txtId" IsEnabled="False" IsVisible="False"/>
             <Label Text="Nome:"/>
             <Entry x:Name="txtNome" Placeholder="Digite o Nome do Médico"/>
             <Label Text="Horário de Entrada:"/>
-            <Entry x:Name="txtHoraEntra" Placeholder="Digite o Horário de Entrada"/>
+            <TimePicker x:Name="txtHoraEntra" Format="HH:mm"/>
             <Label Text="Horário de Saída:"/>
-            <Entry x:Name="txtHoraSai" Placeholder="Digite o Horário de Saída" />
-            <Button x:Name="btnCadastrar" Text="Cadastrar Médico" BackgroundColor="LightGreen" CornerRadius="20" Clicked="btnCadastrar_Clicked" FontAttributes="Bold"/>
+            <TimePicker x:Name="txtHoraSai"  Format="HH:mm"/>
+            <Label Text="Alerta: Caso exceda os Turnos Padrões o Médico, será redirecionado para os Turnos Mistos!" TextColor="IndianRed"/>
+            <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+                
+                <Button x:Name="btnCadastrar" Text="Cadastrar Médico" BackgroundColor="LightGreen" CornerRadius="20" Clicked="btnCadastrar_Clicked" FontAttributes="Bold"/>
+                <Button x:Name="btnCancelar" Text="Cancelar" BackgroundColor="IndianRed" CornerRadius="20" Clicked="btnCancelar_Clicked"  FontAttributes="Bold"/>
+            </StackLayout>
+            
+            
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
